# podcast

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  drizzle.config.ts  entrypoint.sh  modal_app.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml
.githooks/: pre-commit
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_job_metrics.py  002_add_log_entries.py  003_add_job_metrics.py  004_add_episode_model_selection.py  004_add_target_length_minutes.py  005_add_episode_model_selection.py  005_add_transcript_tone_notes.py  006_add_transcript_tone_notes.py  007_add_multi_user.py  008_add_user_email.py
drizzle/: 0000_robust_purple_man.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: auth.ts  config.ts  database.ts  log-handler.ts  schema.ts  server.ts  validation.ts  worker.ts
src/podcast/: auth.py  config.py  database.py  dependencies.py  log_handler.py  (+5 more)
templates/: auth_callback.html  base.html  episode_detail.html  episode_new.html  index.html  login.html  logs.html  metrics.html  not_registered.html  settings.html
tests/: conftest.py  test_config.py  test_log_handler.py  test_main.py  test_models.py  test_routers_api.py  test_routers_feed.py  test_routers_pages.py  test_schemas.py  test_services_claude_client.py  test_services_encoder.py  test_services_episode.py  test_services_feed.py  test_services_llm_providers.py  test_services_research.py  test_services_transcript.py  test_services_tts.py  test_worker.py
voice_refs/: .gitkeep
(+35 files in other folders)
