[project]
name = "podcast"
version = "0.1.0"
description = "Private podcast feed generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "pydantic-settings>=2.13",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "anthropic>=0.86",
    "feedgen>=1.0",
    "pydub>=0.25",
    "chatterbox-tts>=0.1.7",
    "httpx>=0.28",
    "PyJWT[crypto]>=2.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
